InjectionParser.py
# Generated from Injection.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class InjectionParser ( Parser ):

    grammarFileName = "Injection.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'union'", "'/*!union*/'", "'/*!50000union*/'", 
                     "'distinct'", "'all'", "'/*!'", "'*/'", "'50000'", 
                     "'false'", "'true'", "'{a'", "'1}=1'", "'{x'", "'1)}=1'", 
                     "'{`if`'", "'updatexml'", "'extractvalue'", "'concat'", 
                     "'0x7e'", "'@@version'", "'+'", "'%0b'", "' '", "'%0a'", 
                     "'%0c'", "'%0d'", "'%a0'", "'%09'", "'/**/'", "'%20'", 
                     "'#'", "'%23'", "'--'", "'sleep'", "'<@=1'", "'<@!=1'", 
                     "'<@=1.'", "'<@=.1'", "'<@!=.1'", "'<@!=1.'", "'1<@'", 
                     "'@<@'", "'!@<@'", "'!@<@.'", "'1<@.'", "'@<@.'", "'('", 
                     "')'", "'1'", "'''", "'%27'", "'\"'", "'0'", "'2'", 
                     "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'a'", 
                     "'!'", "'not'", "'~'", "'%7e'", "'='", "'%3d'", "'<'", 
                     "'%3C'", "'>'", "'%3e'", "'like'", "'is'", "'-'", "'or'", 
                     "'||'", "'and'", "'&&'", "'select'", "';'", "','", 
                     "'%2C'" ]

    symbolicNames = [  ]

    RULE_start = 0
    RULE_mode_n = 1
    RULE_mode_n1 = 2
    RULE_mode_n2 = 3
    RULE_mode_n3 = 4
    RULE_mode_n4 = 5
    RULE_mode_n5 = 6
    RULE_mode_s = 7
    RULE_mode_s1 = 8
    RULE_mode_s2 = 9
    RULE_mode_s3 = 10
    RULE_mode_s4 = 11
    RULE_mode_s5 = 12
    RULE_mode_s6 = 13
    RULE_mode_s7 = 14
    RULE_mode_d = 15
    RULE_mode_d1 = 16
    RULE_mode_d2 = 17
    RULE_mode_d3 = 18
    RULE_mode_d4 = 19
    RULE_mode_sqli = 20
    RULE_mode_piggy = 21
    RULE_mode_union = 22
    RULE_mode_u1 = 23
    RULE_mode_u2 = 24
    RULE_mode_u3 = 25
    RULE_mode_u4 = 26
    RULE_val_uu = 27
    RULE_mode_up = 28
    RULE_mode_up1 = 29
    RULE_mode_up2 = 30
    RULE_cols = 31
    RULE_distinct = 32
    RULE_all = 33
    RULE_t1 = 34
    RULE_t2 = 35
    RULE_t3 = 36
    RULE_t4 = 37
    RULE_t5 = 38
    RULE_mode_bool = 39
    RULE_mode_or = 40
    RULE_mode_and = 41
    RULE_mode_unf = 42
    RULE_mode_bf2 = 43
    RULE_mode_bf3 = 44
    RULE_mode_fa = 45
    RULE_mode_fa1 = 46
    RULE_mode_fa2 = 47
    RULE_mode_fa3 = 48
    RULE_mode_fa4 = 49
    RULE_mode_fa5 = 50
    RULE_falseConst = 51
    RULE_mode_bt = 52
    RULE_mode_bt2 = 53
    RULE_mode_unt = 54
    RULE_mode_unt1 = 55
    RULE_mode_unt2 = 56
    RULE_mode_unt3 = 57
    RULE_mode_unt4 = 58
    RULE_mode_unt5 = 59
    RULE_mode_unt6 = 60
    RULE_mode_bt2_1 = 61
    RULE_mode_bt2_2 = 62
    RULE_mode_bt2_3 = 63
    RULE_mode_bt2_4 = 64
    RULE_mode_bt2_5 = 65
    RULE_mode_bt2_6 = 66
    RULE_mode_bt2_7 = 67
    RULE_mode_bt2_8 = 68
    RULE_mode_bt2_9 = 69
    RULE_mode_bt2_10 = 70
    RULE_mode_bt2_11 = 71
    RULE_mode_bt2_12 = 72
    RULE_mode_ta = 73
    RULE_mode_ta1 = 74
    RULE_mode_ta2 = 75
    RULE_mode_ta3 = 76
    RULE_mode_ta4 = 77
    RULE_mode_ta5 = 78
    RULE_trueConst = 79
    RULE_na = 80
    RULE_n11 = 81
    RULE_nx = 82
    RULE_n111 = 83
    RULE_nif = 84
    RULE_mode_error = 85
    RULE_val_ef = 86
    RULE_nconcat = 87
    RULE_n0x7e = 88
    RULE_nversion = 89
    RULE_val_wsp = 90
    RULE_mode_cmt = 91
    RULE_mode_cmt2 = 92
    RULE_val_ht = 93
    RULE_doubleDash = 94
    RULE_funcSleep = 95
    RULE_sleep = 96
    RULE_val_fs = 97
    RULE_val_fe = 98
    RULE_parOpen = 99
    RULE_par = 100
    RULE_terOne = 101
    RULE_val_tsq = 102
    RULE_terDQuote = 103
    RULE_terDigitZero = 104
    RULE_terDigitOne = 105
    RULE_val_dez = 106
    RULE_val_diz = 107
    RULE_terChar = 108
    RULE_val_not = 109
    RULE_val_bi = 110
    RULE_val_eq = 111
    RULE_val_lt = 112
    RULE_val_gt = 113
    RULE_opLike = 114
    RULE_opIs = 115
    RULE_opMinus = 116
    RULE_val_or = 117
    RULE_val_and = 118
    RULE_opSel = 119
    RULE_opUni = 120
    RULE_opSem = 121
    RULE_val_com = 122

    ruleNames =  [ "start", "mode_n", "mode_n1", "mode_n2", "mode_n3", "mode_n4", 
                   "mode_n5", "mode_s", "mode_s1", "mode_s2", "mode_s3", 
                   "mode_s4", "mode_s5", "mode_s6", "mode_s7", "mode_d", 
                   "mode_d1", "mode_d2", "mode_d3", "mode_d4", "mode_sqli", 
                   "mode_piggy", "mode_union", "mode_u1", "mode_u2", "mode_u3", 
                   "mode_u4", "val_uu", "mode_up", "mode_up1", "mode_up2", 
                   "cols", "distinct", "all", "t1", "t2", "t3", "t4", "t5", 
                   "mode_bool", "mode_or", "mode_and", "mode_unf", "mode_bf2", 
                   "mode_bf3", "mode_fa", "mode_fa1", "mode_fa2", "mode_fa3", 
                   "mode_fa4", "mode_fa5", "falseConst", "mode_bt", "mode_bt2", 
                   "mode_unt", "mode_unt1", "mode_unt2", "mode_unt3", "mode_unt4", 
                   "mode_unt5", "mode_unt6", "mode_bt2_1", "mode_bt2_2", 
                   "mode_bt2_3", "mode_bt2_4", "mode_bt2_5", "mode_bt2_6", 
                   "mode_bt2_7", "mode_bt2_8", "mode_bt2_9", "mode_bt2_10", 
                   "mode_bt2_11", "mode_bt2_12", "mode_ta", "mode_ta1", 
                   "mode_ta2", "mode_ta3", "mode_ta4", "mode_ta5", "trueConst", 
                   "na", "n11", "nx", "n111", "nif", "mode_error", "val_ef", 
                   "nconcat", "n0x7e", "nversion", "val_wsp", "mode_cmt", 
                   "mode_cmt2", "val_ht", "doubleDash", "funcSleep", "sleep", 
                   "val_fs", "val_fe", "parOpen", "par", "terOne", "val_tsq", 
                   "terDQuote", "terDigitZero", "terDigitOne", "val_dez", 
                   "val_diz", "terChar", "val_not", "val_bi", "val_eq", 
                   "val_lt", "val_gt", "opLike", "opIs", "opMinus", "val_or", 
                   "val_and", "opSel", "opUni", "opSem", "val_com" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mode_n(self):
            return self.getTypedRuleContext(InjectionParser.Mode_nContext,0)


        def mode_s(self):
            return self.getTypedRuleContext(InjectionParser.Mode_sContext,0)


        def mode_d(self):
            return self.getTypedRuleContext(InjectionParser.Mode_dContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = InjectionParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.state = 249
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 246
                self.mode_n()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 247
                self.mode_s()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 248
                self.mode_d()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_nContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mode_n1(self):
            return self.getTypedRuleContext(InjectionParser.Mode_n1Context,0)


        def mode_n2(self):
            return self.getTypedRuleContext(InjectionParser.Mode_n2Context,0)


        def mode_n3(self):
            return self.getTypedRuleContext(InjectionParser.Mode_n3Context,0)


        def mode_n4(self):
            return self.getTypedRuleContext(InjectionParser.Mode_n4Context,0)


        def mode_n5(self):
            return self.getTypedRuleContext(InjectionParser.Mode_n5Context,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n" ):
                listener.enterMode_n(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n" ):
                listener.exitMode_n(self)




    def mode_n(self):

        localctx = InjectionParser.Mode_nContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mode_n)
        try:
            self.state = 256
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 251
                self.mode_n1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 252
                self.mode_n2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 253
                self.mode_n3()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 254
                self.mode_n4()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 255
                self.mode_n5()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_n1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_diz(self):
            return self.getTypedRuleContext(InjectionParser.Val_dizContext,0)


        def val_wsp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InjectionParser.Val_wspContext)
            else:
                return self.getTypedRuleContext(InjectionParser.Val_wspContext,i)


        def mode_bool(self):
            return self.getTypedRuleContext(InjectionParser.Mode_boolContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n1" ):
                listener.enterMode_n1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n1" ):
                listener.exitMode_n1(self)




    def mode_n1(self):

        localctx = InjectionParser.Mode_n1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mode_n1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 258
            self.val_diz()
            self.state = 259
            self.val_wsp()
            self.state = 260
            self.mode_bool()
            self.state = 261
            self.val_wsp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_n2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_diz(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InjectionParser.Val_dizContext)
            else:
                return self.getTypedRuleContext(InjectionParser.Val_dizContext,i)


        def par(self):
            return self.getTypedRuleContext(InjectionParser.ParContext,0)


        def val_wsp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InjectionParser.Val_wspContext)
            else:
                return self.getTypedRuleContext(InjectionParser.Val_wspContext,i)


        def mode_bool(self):
            return self.getTypedRuleContext(InjectionParser.Mode_boolContext,0)


        def val_or(self):
            return self.getTypedRuleContext(InjectionParser.Val_orContext,0)


        def parOpen(self):
            return self.getTypedRuleContext(InjectionParser.ParOpenContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n2" ):
                listener.enterMode_n2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n2" ):
                listener.exitMode_n2(self)




    def mode_n2(self):

        localctx = InjectionParser.Mode_n2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mode_n2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 263
            self.val_diz()
            self.state = 264
            self.par()
            self.state = 265
            self.val_wsp()
            self.state = 266
            self.mode_bool()
            self.state = 267
            self.val_wsp()
            self.state = 268
            self.val_or()
            self.state = 269
            self.parOpen()
            self.state = 270
            self.val_diz()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_n3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_diz(self):
            return self.getTypedRuleContext(InjectionParser.Val_dizContext,0)


        def val_wsp(self):
            return self.getTypedRuleContext(InjectionParser.Val_wspContext,0)


        def mode_sqli(self):
            return self.getTypedRuleContext(InjectionParser.Mode_sqliContext,0)


        def mode_cmt(self):
            return self.getTypedRuleContext(InjectionParser.Mode_cmtContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n3" ):
                listener.enterMode_n3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n3" ):
                listener.exitMode_n3(self)




    def mode_n3(self):

        localctx = InjectionParser.Mode_n3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mode_n3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 272
            self.val_diz()
            self.state = 273
            self.val_wsp()
            self.state = 274
            self.mode_sqli()
            self.state = 275
            self.mode_cmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_n4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_diz(self):
            return self.getTypedRuleContext(InjectionParser.Val_dizContext,0)


        def par(self):
            return self.getTypedRuleContext(InjectionParser.ParContext,0)


        def val_wsp(self):
            return self.getTypedRuleContext(InjectionParser.Val_wspContext,0)


        def mode_sqli(self):
            return self.getTypedRuleContext(InjectionParser.Mode_sqliContext,0)


        def mode_cmt(self):
            return self.getTypedRuleContext(InjectionParser.Mode_cmtContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n4" ):
                listener.enterMode_n4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n4" ):
                listener.exitMode_n4(self)




    def mode_n4(self):

        localctx = InjectionParser.Mode_n4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mode_n4)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 277
            self.val_diz()
            self.state = 278
            self.par()
            self.state = 279
            self.val_wsp()
            self.state = 280
            self.mode_sqli()
            self.state = 281
            self.mode_cmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_n5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_diz(self):
            return self.getTypedRuleContext(InjectionParser.Val_dizContext,0)


        def val_tsq(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InjectionParser.Val_tsqContext)
            else:
                return self.getTypedRuleContext(InjectionParser.Val_tsqContext,i)


        def val_wsp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InjectionParser.Val_wspContext)
            else:
                return self.getTypedRuleContext(InjectionParser.Val_wspContext,i)


        def mode_bool(self):
            return self.getTypedRuleContext(InjectionParser.Mode_boolContext,0)


        def val_or(self):
            return self.getTypedRuleContext(InjectionParser.Val_orContext,0)


        def terDigitZero(self):
            return self.getTypedRuleContext(InjectionParser.TerDigitZeroContext,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_n5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_n5" ):
                listener.enterMode_n5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_n5" ):
                listener.exitMode_n5(self)




    def mode_n5(self):

        localctx = InjectionParser.Mode_n5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mode_n5)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 283
            self.val_diz()
            self.state = 284
            self.val_tsq()
            self.state = 285
            self.val_wsp()
            self.state = 286
            self.mode_bool()
            self.state = 287
            self.val_wsp()
            self.state = 288
            self.val_or()
            self.state = 289
            self.val_tsq()
            self.state = 290
            self.terDigitZero()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mode_sContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mode_s1(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s1Context,0)


        def mode_s2(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s2Context,0)


        def mode_s3(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s3Context,0)


        def mode_s4(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s4Context,0)


        def mode_s5(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s5Context,0)


        def mode_s6(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s6Context,0)


        def mode_s7(self):
            return self.getTypedRuleContext(InjectionParser.Mode_s7Context,0)


        def getRuleIndex(self):
            return InjectionParser.RULE_mode_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMode_s" ):
                listener.enterMode_s(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMode_s" ):
                listener.exitMode_s(self)




    def mode_s(self):

        localctx = InjectionParser.Mode_sContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mode_s)
        try:
            self.state = 299
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 292
                self.mode_s1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 293
                self.mode_s2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 294
                self.mode_s3()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 295
                self.mode_s4()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 296
                self.mode_s5()
                pass
